# top-songs-dashboard

./: .dockerignore  .env.dev  .env.sample  .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: ai-global-rule.mdc
docs/: 01-project_description.md  02-project_architecture.md  03-project_plan.md  04-data-simulator.md
scripts/: run.sh
tests/core/config/: test_settings.py
tests/ingestion/api/: test_app.py
tests/ingestion/simulator/: test_api_poster.py  test_cli.py  test_event_factory.py  test_master_data_generator.py  test_simulation_engine.py
tests/storage/: __init__.py
tests/storage/object_store/: __init__.py  test_s3.py
top_songs/: main.py
top_songs/cli/: __init__.py  commands.py  main.py
top_songs/core/: connectivity.py
top_songs/core/config/: __init__.py  logger.py  settings.py
top_songs/core/models/: __init__.py  simulator_models.py
top_songs/ingestion/api/: __init__.py  app.py
top_songs/ingestion/simulator/: api_poster.py  cli.py  commands.py  event_factory.py  master_data_generator.py  simulation_engine.py  utils.py
top_songs/storage/database/: __init__.py  postgres.py
top_songs/storage/object_store/: __init__.py  s3.py
top_songs/streaming/: __init__.py  kafka.py
